# causalpruning

./: .gitattributes  .gitignore  Causal Model Debugging.ipynb  LICENSE  README.md  datasets_setup.py  environment.yml  pyproject.toml  setup.sh  test_utils.py
causalpruner/: __init__.py  average.py  base.py  causal_pruner_base.py  causal_weights_trainer.py  lasso_optimizer.py  lrrt.py  sgd_pruner.py  trainer.py
notebooks/: dev.ipynb  tensorboard.ipynb
results/: compare.ipynb
results/sklearn_checkpoints/lenet_cifar10_causalpruner_10_0_2_1e-06/: init.ckpt
results/sklearn_zscale_checkpoints/lenet_cifar10_causalpruner_10_0_2_1e-06/: init.ckpt
results/torch_checkpoints/lenet_cifar10_causalpruner_10_0_2_1e-06/: init.ckpt
results/torch_zscale_checkpoints/lenet_cifar10_causalpruner_10_0_2_1e-06/: init.ckpt
tests/: Causal Model Debugging.ipynb  alexnet.sh  alexnet_ablation.sh  context.py  eval.py  exp.sh  lenet.sh  lenet_ablation.sh  lenet_cifar10.sh  lightning_trainer.py  lr_schedulers.py  main.py  mobilenet.sh  plot.py  resnet18.sh  resnet20.sh  resnet20_cifar10_ablation.sh  resnet20_cifar10augment.sh  tester.py  trainer.py
tests/datasets/: __init__.py  cifar10.py  fashion_mnist.py  imagenet.py  mnist.py  tinyimagenet.py
tests/models/: __init__.py  alexnet.py  fully_connected.py  lenet.py  mlpnet.py  mobilenet.py  resnet.py  resnet20.py  resnet_cifar.py
tests/models/trained_checkpoints/: mlpnet_mnist.pth  mobilenet.pth  resnet20.pth  resnet50.pth
tests/pruner/: combined_pruner.py  mag_pruner.py
tests/torchrun/: train.py
