[project]
name = "causalpruning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.32.0",
    "lightning>=2.5.0.post0",
    "psutil>=7.0.0",
    "scikit-learn>=1.6.1",
    "stocaching>=0.2.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
